src/objects/Tool_Data_Assets__c.object
<CustomObject>
    <fields>
        <fullName>Related_Data_Asset__c</fullName>
        <label>RWD Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Related Tools</relationshipLabel>
        <relationshipName>RWE_Tool_Data_Assets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Tool_Inventory__c</fullName>
        <label>Tool Inventory</label>
        <referenceTo>Tool_Inventory__c</referenceTo>
        <relationshipLabel>Related Data Assets</relationshipLabel>
        <relationshipName>RWE_Tool_Data_Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Tool_Data_Asset_TF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Unique Tool Data Asset TF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related Data Asset</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Tool Data Assets Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Data Assets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>